packages/typ/tests/fixtures/diagnostics/0428_modules_alias_hidden_annotation_mismatch_02.ml.expected
File "0428_modules_alias_hidden_annotation_mismatch_02.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0428_modules_alias_hidden_annotation_mismatch_02 is not a valid module name.

File "0428_modules_alias_hidden_annotation_mismatch_02.ml", line 14, characters 14-26:
14 | let _ : int = Alias_beta.x
                   ^^^^^^^^^^^^
Error: The value Alias_beta.x has type Alias_beta.t = Hidden_beta.t
       but an expression was expected of type int
